# server/router/deploy_env.go
@@ -9,6 +9,9 @@ import (
 func InitDeployEnvRouter(Router *gin.RouterGroup) {
 	ApiRouter := Router.Group("deploy/env").Use(middleware.JWTAuth()).Use(middleware.CasbinHandler())
 	{
-		ApiRouter.POST("getDeployEnvList", v1.GetDeployEnvList) // 获取所有api
+		ApiRouter.POST("getEnvList", v1.GetEnvList) // 获取所有环境
+		ApiRouter.POST("envCreate", v1.EnvCreate)   // 创建环境
+		ApiRouter.POST("envUpdate", v1.EnvUpdate)   // 更新环境
+		ApiRouter.DELETE("envDelete", v1.EnvDelete) // 删除环境
 	}
 }
